# tesserRISC

./: CMakeLists.txt  README.md
.github/workflows/: CI.yml  build-job.yml  unit-test.yml
include/: elf.hpp  instruction.hpp  memory.hpp  processor.hpp  register.hpp
src/: instruction.cpp  main.cpp  register.cpp
test/: CMakeLists.txt  test_instruction.cpp
